{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 19,
  "lineage": "41456d09-1b2e-b237-1c61-6f2311a1a118",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "technogise_alb_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:loadbalancer/app/technogise-alb-load-balancer/2c2f3fa59636684b",
            "arn_suffix": "app/technogise-alb-load-balancer/2c2f3fa59636684b",
            "dns_name": "technogise-alb-load-balancer-330940032.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:loadbalancer/app/technogise-alb-load-balancer/2c2f3fa59636684b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technogise-alb-load-balancer",
            "security_groups": [
              "sg-008be2e3f3c149ca7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00846c20558091e52"
              },
              {
                "subnet_id": "subnet-062919ac8815b17ca"
              }
            ],
            "subnets": [
              "subnet-00846c20558091e52",
              "subnet-062919ac8815b17ca"
            ],
            "tags": {
              "Name": "technogise-alb-load-balancer"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "depends_on": [
            "aws_security_group.technogise_public_sg",
            "aws_subnet.technogise_public_sn_01",
            "aws_subnet.technogise_public_sn_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:listener/app/technogise-alb-load-balancer/2c2f3fa59636684b/865ba3555f9e1796",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:targetgroup/technogise-app-target-group/daa755590cd7c4ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:listener/app/technogise-alb-load-balancer/2c2f3fa59636684b/865ba3555f9e1796",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:loadbalancer/app/technogise-alb-load-balancer/2c2f3fa59636684b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.technogise_alb_load_balancer",
            "aws_alb_target_group.technogise_app_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "technogise_app_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:targetgroup/technogise-app-target-group/daa755590cd7c4ab",
            "arn_suffix": "targetgroup/technogise-app-target-group/daa755590cd7c4ab",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:185966419215:targetgroup/technogise-app-target-group/daa755590cd7c4ab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "technogise-app-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "technogise-app-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_vpc.technogise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "technogise_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fc08034835d44b89",
            "owner_id": "185966419215",
            "tags": {
              "Name": "technogise_ig"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_vpc.technogise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "technogise_public_sn_rt_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d3ca6a81c79733c8",
            "owner_id": "185966419215",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc08034835d44b89",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "technogise_public_sn_rt_01"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_internet_gateway.technogise_ig",
            "aws_vpc.technogise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "technogise_public_sn_rt_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00010a161076031c2",
            "owner_id": "185966419215",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc08034835d44b89",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "technogise_public_sn_rt_02"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_internet_gateway.technogise_ig",
            "aws_vpc.technogise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "technogise_public_sn_rt_01_assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed311331f3c099eb",
            "route_table_id": "rtb-0d3ca6a81c79733c8",
            "subnet_id": "subnet-062919ac8815b17ca"
          },
          "depends_on": [
            "aws_route_table.technogise_public_sn_rt_01",
            "aws_subnet.technogise_public_sn_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "technogise_public_sn_rt_assn_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0693357304253bd22",
            "route_table_id": "rtb-00010a161076031c2",
            "subnet_id": "subnet-00846c20558091e52"
          },
          "depends_on": [
            "aws_route_table.technogise_public_sn_rt_02",
            "aws_subnet.technogise_public_sn_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "technogise_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:185966419215:security-group/sg-008be2e3f3c149ca7",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008be2e3f3c149ca7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "210.0.0.0/24",
                  "210.0.10.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "technogise_public_sg",
            "name_prefix": null,
            "owner_id": "185966419215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "technogise_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_vpc.technogise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "technogise_public_sn_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:185966419215:subnet/subnet-062919ac8815b17ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "210.0.0.0/24",
            "id": "subnet-062919ac8815b17ca",
            "map_public_ip_on_launch": false,
            "owner_id": "185966419215",
            "tags": {
              "Name": "technogise_public_sn_01"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_vpc.technogise_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "technogise_public_sn_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:185966419215:subnet/subnet-00846c20558091e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "210.0.10.0/24",
            "id": "subnet-00846c20558091e52",
            "map_public_ip_on_launch": false,
            "owner_id": "185966419215",
            "tags": {
              "Name": "technogise_public_sn_02"
            },
            "vpc_id": "vpc-04ca5d97a4e314b2f"
          },
          "depends_on": [
            "aws_vpc.technogise_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "technogise_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:185966419215:vpc/vpc-04ca5d97a4e314b2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "210.0.0.0/16",
            "default_network_acl_id": "acl-0323ffd69f0bee04c",
            "default_route_table_id": "rtb-0b3ec52db3428badf",
            "default_security_group_id": "sg-0dba620ee90b5f224",
            "dhcp_options_id": "dopt-ab5f78cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ca5d97a4e314b2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b3ec52db3428badf",
            "owner_id": "185966419215",
            "tags": {
              "Name": "technogise_vpc"
            }
          }
        }
      ]
    }
  ]
}